fixed no wrap bug in gallery

--- a/style/gallery.css
+++ b/style/gallery.css
@@ -21,7 +21,7 @@ main p {
 
 main > div {
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     justify-content: center;
     gap: 30px;
     margin-top: 30px;
